--- a/source/netflix-clone/src/components/Banner/banner.css
+++ b/source/netflix-clone/src/components/Banner/banner.css
@@ -1,14 +1,14 @@
 .banner{
     margin-top:-10vh;
     height:80vh;
-    margin-bottom: 80px;
+    margin-bottom: -80px;
     color: white;
 	object-fit: contain;
 }
 .banner__contents {
 	margin-left: 30px;
 	padding-top: 300px;
-	height: 190px;
+	/* height: 190px; */
 }
 .banner__title {
 	font-size: 3rem;
