--- a/netflix-clone/src/components/Header/Header.css
+++ b/netflix-clone/src/components/Header/Header.css
@@ -1,43 +1,73 @@
-.header_outer_container{
-    position:sticky;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgb(148, 132, 132); */
-    /* background-color:  rgb(20, 20, 20); */
-    background-color: transparent;
-    height: 10vh;
-    color: white;
-    transition:all 0.5s;
-    transition-timing-function: ease-in;
-    z-index: 1;
-    /* background-color: red; */
+.header_outer_container {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  height: 10vh;
+  color: white;
+  transition: all 0.5s ease-in;
+  z-index: 1;
 }
-.nav__black{
-    background-color:  rgb(20, 20, 20);
+
+.header_container {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.header_container{
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* background-color: yellow; */
+
+.header_left {
+  display: flex;
+  align-items: center;
 }
-.header_left ul{
-    width: 140%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    cursor: pointer;
-    /* background-color: lightblue; */
+
+.nav_links {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  cursor: pointer;
+  transition: max-height 0.3s ease-in;
 }
-.header_right ul{
-    width: 150%;
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    cursor: pointer;
-    /* background-color: lightgreen; */
+
+.nav_links li {
+  margin: 0 10px;
+}
+
+.header_right ul {
+  display: flex;
+  list-style: none;
+  cursor: pointer;
+}
+
+.menu_icon {
+  display: none;
+  cursor: pointer;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .nav_links {
+    display: block;
+    position: absolute;
+    top: 10vh;
+    left: 0;
+    width: 100%;
+    background-color: rgb(20, 20, 20);
+    max-height: 0;
+    overflow: hidden;
+  }
+
+  .nav_links.open {
+    max-height: 300px;
+  }
+
+  .header_right ul {
+    display: none;
+  }
+
+  .menu_icon {
+    display: block;
+  }
 }
