--- a/netflix-clone/src/components/banner/banner.css
+++ b/netflix-clone/src/components/banner/banner.css
@@ -1,6 +1,6 @@
 .banner{
-    margin-top:-10vh;
-    height:80vh;
+    margin-top:-5vh;
+    height:100vh;
     margin-bottom: 80px;
     color: white;
 	object-fit: contain;
@@ -45,13 +45,23 @@
 	transition: all0.2s;
 }
 .banner__fadeBottom {
-	height: 40vh;
+	height: 60vh;
 	background-image: linear-gradient(
 		180deg,
 		transparent,
 		rgb(37, 37, 37, 0.91),
 		#111
 	);
+}
+
+@media (max-width: 768px) {
+	.banner{
+		height:70vh;
+		/* margin-top: 0px; */
+	}
+	.banner__fadeBottom {
+		height: 40vh;
+	}
 }
 
 
