--- a/netflix-clone/src/index.css
+++ b/netflix-clone/src/index.css
@@ -1,16 +1,27 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-:root {
-  --font-base: 'Lexend', sans-serif;;
-  --font-second-base: 'Inter', sans-serif;
-  --bg-color:#111;
-  --primary-color: #ffffff;
-  --secondary-color: #e50914;
-}
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+:root {
+  font-family: "Lexend", "Inter", sans-serif;
+  background-color: #111, #ffffff, #e50914;
+  /* --font-base: "Lexend", sans-serif;
+  --font-second-base: "Inter", sans-serif;
+  --bg-color: #111;
+  --primary-color: #ffffff;
+  --secondary-color: #e50914; */
+}
+* {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 body {
